removed unused query parameters
